Added aws s3 integration

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,16 +1,3 @@
-spring.application.name=microservice-automation
-
-eureka.client.enabled=true
-ribbon.eureka.enabled=true
-#spring.cloud.config.enabled=true
-#eureka.client.register-with-eureka=false
-#
-feign.logging.enabled=true
-#
-#ribbon.MaxAutoRetries=3
-#bonus-service.ribbon.ReadTimeout=1
-#ribbon.ConnectTimeout=1
-feign.client.config.bonus-service.readTimeout=1000
-feign.client.config.bonus-service.connectTimeout=1000
-
-#bonus-service.ribbon.listOfServers=http://localhost:8080
+spring.application.name=aws-automation
+#aws.region=Frankfurt
+cloud.aws.region=Global
