--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,1 @@
-
-eureka.client.eureka-server-port=8761
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${eureka.client.eureka-server-port}/eureka
+aws.region=Frankfurt 
