--- a/src/test/resources/application-aws.properties
+++ b/src/test/resources/application-aws.properties
@@ -1,3 +1,3 @@
 aws.region=eu-central-1
-aws.accessKey=
-aws.secretKey=
+aws.accessKey=AKIAQCIZZMBWRIPOUVUO
+aws.secretKey=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
